fix alignment issues with photo and social media icons in home page.

--- a/src/Components/SocialMediaIcons.css
+++ b/src/Components/SocialMediaIcons.css
@@ -1,6 +1,14 @@
 
+.socialMedia
+{
+  display: flex;
+  width: 5em;
+  margin: auto;
+}
+
 .socialMedia a {
-    display: inline-block;
+    flex: 1;
     color: green;
     margin:0.25em 0.0em 1em 0.25em;
+    text-indent: 0px;
   }
