--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -5,10 +5,12 @@
   margin-right: auto;
   display: block;
   width: 25%;
+  text-indent: 0px;
 }
 
 .bioPhoto img
 {
+  padding: 0px;
   border-radius: 50%;
   height: 100%;
   width: 100%;
